--- a/src/renderer/src/pages/StudentDetailsPage.css
+++ b/src/renderer/src/pages/StudentDetailsPage.css
@@ -195,8 +195,9 @@
   display: flex;
   justify-content: space-between;
   font-size: 0.875rem;
-  padding: 5px 0;
+  padding: 10px 0;
   gap: 5px;
+  padding-left: 10px;
 }
 
 .status-badge {
