--- a/src/renderer/src/pages/Dashboard.css
+++ b/src/renderer/src/pages/Dashboard.css
@@ -243,7 +243,7 @@ table {
   width: 100%;
   border-collapse: separate;
   border-spacing: 0;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
 }
 
 th {
