--- a/src/renderer/src/pages/StudentDetailsPage.css
+++ b/src/renderer/src/pages/StudentDetailsPage.css
@@ -122,7 +122,7 @@
   gap: 1.5rem;
 }
 
-.book-card {
+/* .book-card {
   background: #f8fafc;
   border-radius: 1rem;
   padding: 1.5rem;
@@ -131,8 +131,8 @@
   border: 1px solid rgba(226, 232, 240, 0.8);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
+  /* gap: 1rem; */
+/* } */
 
 .book-card.unpaid-book {
   background: rgba(254, 226, 226, 0.6);
